测试了酒店预订模块的后端部分，对接口进行了微调